<resources>
    <string name="app_name">CoinTract</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro_text">Manage your crypto assets,\n Simply</string>
    <string name="home">Home</string>
    <string name="wallet">Portfolio</string>
    <string name="news">News</string>
    <string name="channel_name">coin_channel</string>
    <string name="channel_description">coin_price_reminder</string>
    <string name="app_setting_text">App</string>

    <!-- Preference Titles -->
    <string name="security">Security</string>
    <string name="biometric">Biometric Authentication</string>
    <string name="launch_screen">Launch Screen</string>
    <string name="switch_mode">Switch Mode</string>
    <string name="set_display_name">Set Display Name</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Ok</string>
    <string name="markets">Markets</string>
    <string name="about_us">About Us</string>
    <string name="help_center">Help Center</string>
    <string name="tools">Tools</string>
    <string name="start">Start</string>

    <string name="start_text_advice">By continuing on this application you agree to our Terms of Use and Privacy Policy</string>
    <string name="title_onboarding_1">Welcome to Onboarding App !</string>
    <string name="description_onboarding_1">Here is an open-source project which shows sweet &amp; original onboarding ViewPagers that follows Material Design Guidelines</string>

    <string name="title_onboarding_2">Try AirBnB Lottie</string>
    <string name="description_onboarding_2">We use Lottie Animations on our Intro to make it interactive &amp; pleasant. Did you already tried it ? If no, let\'s start now. It\'s just awesome</string>

    <string name="title_onboarding_3">Code beautiful apps</string>
    <string name="description_onboarding_3">Our mission is to make useful &amp; subtle apps. We love help people to save time with open-source stuffs, but we also make life easier by creating new things. Good Coding!</string>

</resources>